syntax = "proto3";

package com.github.im.common.connect.model.proto;
option java_package = "com.github.im.group.model.proto";
option java_outer_classname = "BaseMessage";
import "UserInfoProto.proto";
import "Notification.proto";
import "Message.proto";

/**
 * 基础消息包
 */
message BaseMessagePkg {

//https://protobuf.dev/programming-guides/proto3/#oneof
  oneof payload {

    UserInfo userInfo = 1;

    ChatMessage message = 2;

    NotificationInfo notification = 3;

    AckMessage ack = 4;

    Heartbeat heartbeat = 5;

  }

}

message Heartbeat {
  bool ping = 1; // true 为 ping，false 为 pong
}